# gut

./: README.md  pyproject.toml
.github/workflows/: release.yaml
src/gut/: _banner.py  main.py  models.py  utils.py
src/gut/workflow/: __init__.py  events.py  flow.py
tests/: test_models.py  test_workflow.py
